tests/baselines/reference/parserIfStatement2.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserIfStatement2.ts(1,5): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserIfStatement2.ts (1 errors) ====
    if (a) {
        ~
!!! error TS2304: Cannot find name 'a'.
    }